# cpa

./: Clarkson_et_al_2004.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt  setup_dev.sh
docs/source/: api.rst  conf.py  examples.rst  index.rst
docs/source/notebooks/: Clarkson_et_al_2004.ipynb
src/cpa/: __init__.py
src/cpm/: __init__.py  cpm.py
tests/: test_cpm.py
